[package]
name = "maptools"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Catsamas <seca8194@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[lib]
name = "maptoolslib"
crate-type = ["dylib"]

[dependencies]
wgpu = "0.12"
cpython = {version = "0.7.0", features = ["extension-module"]}
bytemuck = {version = "1.4", features = ["derive"]}
image = "0.23"
cgmath = "0.18"
pollster = "0.2"

[build-dependencies]
chrono = "0.4.19"

