[package]
name = "maptools"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Catsamas <seca8194@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]   
debug = true

[lib]
name = "maptoolslib"
crate-type = ["cdylib"]

[dependencies]
lexical = "6.1.1"
quick-xml = "0.31.0"
wgpu = "0.18"
futures-channel = "0.3"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
bytemuck = {version = "1.14", features = ["derive"]}
image = "0.24.7"
cgmath = "0.18"
pollster = "0.3"

[build-dependencies]
chrono = "0.4.19"

